[package]
name = "rdxn"
version = "0.1.0"
edition = "2021"
authors = ["brklntmhwk <contact@younagi.dev>"]
license = "MIT"
description = "A CLI tool to convert a numerical value to a radix ğ‘›, where ğ‘› is a positive integer ( 1 < ğ‘› < 36)"
readme = "README.md"
repository = "https://github.com/brklntmhwk/rdxn"
keywords = ["radix", "base", "maths", "hexadecimal", "binary"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
